--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script src="resumeBuilder.js"></script>
+
+<html>
+  <head>
+    <script src="resumeBuilder.js"></script>
+  </head>
+  <body>
+    <div id="main">
+      
+    </div>
+  </body>
+</html>
