--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   </head>
   <body>
     <div id="main">
-      
+      <div id="header">
+        <div id="footer">
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
