--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -136,7 +136,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     }
     if(document.getElementsByClassName('education-entry').length === 0) {
       document.getElementById('education').style.display = 'true';
-     // document.getElementById('education').style.background-color = 'red';
+      document.getElementById('education').style.background-color = 'red';
     }
     if(document.getElementsByClassName('flex-item').length === 0) {
       document.getElementById('lets-connect').style.display = 'none';
