--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -124,31 +124,31 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
     if(document.getElementsByClassName('flex-item').length === 0) {
       document.getElementById('topContacts').style.display = 'true';
-      document.getElementById('topContacts').style.backgroundColor  = 'black';
+      //document.getElementById('topContacts').style.backgroundColor  = 'black';
     }
     if(document.getElementsByTagName('h1').length === 0) {
       document.getElementById('header').style.display = 'true';
-      document.getElementById('header').style.backgroundColor  = 'black';
+      //document.getElementById('header').style.backgroundColor  = 'black';
     }
     if(document.getElementsByClassName('work-entry').length === 0) {
       document.getElementById('workExperience').style.display = 'true';
-      document.getElementById('workExperience').style.backgroundColor  = 'black';
+      //document.getElementById('workExperience').style.backgroundColor  = 'black';
     }
     if(document.getElementsByClassName('project-entry').length === 0) {
       document.getElementById('projects').style.display = 'true';
-      document.getElementById('projects').style.backgroundColor  = 'black';
+      //document.getElementById('projects').style.backgroundColor  = 'black';
     }
     if(document.getElementsByClassName('education-entry').length === 0) {
       document.getElementById('education').style.display = 'true';
-      document.getElementById('education').style.backgroundColor  = 'black';
+      //document.getElementById('education').style.backgroundColor  = 'black';
     }
     if(document.getElementsByClassName('flex-item').length === 0) {
       document.getElementById('lets-connect').style.display = 'true';
-      document.getElementById('lets-connect').style.backgroundColor  = 'black';
+      //document.getElementById('lets-connect').style.backgroundColor  = 'black';
     }
     if(document.getElementById('map') === null) {
       document.getElementById('mapDiv').style.display = 'true';
-      document.getElementById('mapDiv').style.backgroundColor  = 'black';
+      //document.getElementById('mapDiv').style.backgroundColor  = 'black';
     }
   </script>
 </body>
