--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -127,7 +127,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       //document.getElementById('topContacts').style.backgroundColor  = 'black';
     }
     if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'true';
+      document.getElementById('header').style.display = 'none';
       //document.getElementById('header').style.backgroundColor  = 'black';
     }
     if(document.getElementsByClassName('work-entry').length === 0) {
