--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -30,7 +30,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
   -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -59,7 +59,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     </div>
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
-       <script src="http://maps.googleapis.com/maps/api/js?libraries=places&AIzaSyAcswiE6Dpz-Sernun8WrkZrYd4JlwW1AA"></script>
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
