--- a/frontend-nanodegree-resume-master/index.html
+++ b/frontend-nanodegree-resume-master/index.html
@@ -46,6 +46,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     -->
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
+      <div id="headerLeft" class="left"></div>
+      <div id="headerRight" class="right"></div>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
